# requestr

./: Cargo.toml  LICENSE.md  README.md
src/: client.rs  lib.rs  request.rs  response.rs  windows.rs
src/macos/: request.rs  response.rs
src/windows/: bufferbridge.rs  request.rs  response.rs  strings.rs
winbindings/: Cargo.toml  build.rs
