[package]
name = "requestr"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os="macos")'.dependencies]
blocksr = {git = "https://github.com/drewcrawford/blocksr.git",features=["continuation"]}
foundationr = {git = "https://github.com/drewcrawford/foundationr",features=["nsurlsession"]}
objr = {git = "https://github.com/drewcrawford/objr.git"}
tempfile = "3.2.0"


[target.'cfg(target_os="windows")'.dependencies]
requestr-winbindings = {path = "winbindings"}
widestring = "0.4.3"
once_cell = "1.8.0"
wchar = "0.11.0"
windows = "0.21.1"

[dependencies]
pcore = {path = "../pcore"}

[dev-dependencies]
kiruna = {path = "../kiruna",features=["test"]}