[package]
name = "requestr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os="macos")'.dependencies]
blocksr = {git = "https://github.com/drewcrawford/blocksr.git",features=["continuation"]}
foundationr = {git = "https://github.com/drewcrawford/foundationr",features=["nsurlsession"]}
objr = {git = "https://github.com/drewcrawford/objr.git"}
tempfile = "~3"


[target.'cfg(target_os="windows")'.dependencies]
requestr-winbindings = {path = "winbindings"}
widestring = "~0"
once_cell = "~1"
wchar = "~0"
windows = "~0"

[dependencies]
pcore = {git = "https://github.com/drewcrawford/pcore"}

[dev-dependencies]
kiruna = {git = "https://github.com/drewcrawford/kiruna",features=["test"]}